tests/specs/run/_059_fs_relative_path_perm/059_fs_relative_path_perm.ts.out
[WILDCARD]error: Uncaught (in promise) NotCapable: Requires read access to "non-existent", run again with the --allow-read flag
Deno.readFileSync("non-existent");
     ^
    at [WILDCARD]
